force-app/main/default/objects/Devops_Demo__c/Devops_Demo__c.object-meta.xml
<CustomObject>
    <label>Devops Demo</label>
    <nameField>
        <label>Devops Demo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devops Demos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>