force-app/main/default/objects/Devops_Demo__c/fields/CI_Test_Field__c.field-meta.xml
<CustomField>
    <fullName>CI_Test_Field__c</fullName>
    <label>CI Test Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>