force-app/main/default/objects/Devops_Demo__c/fields/Deployment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Date_Time__c</fullName>
    <description>It shows the Deployment Date and Time</description>
    <label>Deployment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>