force-app/main/default/objects/Devops_Demo__c/fields/Deployment_Environment__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Environment__c</fullName>
    <label>Deployment Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>