force-app/main/default/objects/Devops_Demo__c/fields/Deployment_Person__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Person__c</fullName>
    <label>Deployment Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>