force-app/main/default/objects/Devops_Demo__c/fields/Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Hotfix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>