force-app/main/default/objects/Devops_Demo__c/fields/Deployment_Validation__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the check box if the validation for the deployment is happened</description>
    <label>Deployment Validation</label>
    <type>Checkbox</type>
</CustomField>